--- a/src/go-auth/views/login.html
+++ b/src/go-auth/views/login.html
@@ -32,12 +32,18 @@
 
             <div class="form-group">
                 <label>Username</label>
-                <input type="text" name="username" class="form-control" autocomplete="off"/>
+                <input type="text" name="username" class="form-control {{ if .validation.Username }} is-invalid {{ end }}" autocomplete="off"/>
+                <div class="invalid-feedback">
+                    {{ .validation.Username }}
+                </div>
             </div>
 
             <div class="form-group">
                 <label>Password</label>
-                <input type="password" name="password" class="form-control" autocomplete="off"/>
+                <input type="password" name="password" class="form-control {{ if .validation.Password }} is-invalid {{ end }}" autocomplete="off"/>
+                <div class="invalid-feedback">
+                    {{ .validation.Password }}
+                </div>
             </div>
 
             <button type="submit" class="btn btn-success btn-block">SIGN IN</button>
